@@ -3,6 +3,8 @@
 
 Version 8.0.13
 
+  - Fix for Bug#84813 (25501750), rewriteBatchedStatements fails in INSERT.
+
   - Fix for Bug#81196 (23227334), CONNECTOR/J NOT FOLLOWING DATABASE CHARACTER SET.
 
   - Fix for Bug#72609 (18749544), SETDATE() NOT USING A PROLEPTIC GREGORIAN CALENDAR.
